--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,7 +1,9 @@
 name: Node CI
 
-on: [push]
-
+on: 
+  push:
+    branches: 
+      - master
 jobs:
   build:
 
@@ -23,3 +25,5 @@ jobs:
         npm run build
       env:
         CI: true
+    - name: GitHub Pages Deploy
+      uses: maxheld83/ghpages@v0.2.1
