--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --host 0.0.0.0"
+    "start": "sirv public --host 0.0.0.0",
+    "deploy": "npm run build && gh-pages -d public"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.0.0",
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.1",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0",
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "svelte": "^3.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
