--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --host 0.0.0.0",
+    "start": "sirv public -s --host 0.0.0.0",
     "deploy": "npm run build && gh-pages -d public"
   },
   "devDependencies": {
