--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public -s --host 0.0.0.0",
+    "start": "sirv public",
     "deploy": "npm run build && scp -rp public/* parlaqui:/var/www/html/parlaqui.swiss",
     "import": "node import.js"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.0.0",
-    "axios": "^0.19.0",
-    "gh-pages": "^2.1.1",
-    "rollup": "^1.12.0",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "sirv-cli": "^0.4.4",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "axios": "^0.21.1",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "sirv-cli": "^1.0.0"
+  }
 }
